--- a/package.json
+++ b/package.json
@@ -24,27 +24,27 @@
     "start": "parallelshell 'npm run start-dev' 'npm run hot-dev-server' 'npm run watch:html' 'npm run watch:css'"
   },
   "dependencies": {
-    "falcor": "0.1.12",
+    "falcor": "0.1.13",
     "falcor-hapi": "0.0.2",
     "falcor-router": "0.2.9",
-    "lodash": "3.10.0",
-    "hapi": "8.8.0",
+    "hapi": "9.3.1",
+    "inert": "3.0.1",
+    "lodash": "3.10.1",
     "react": "0.13.3",
     "rest": "1.3.1",
-    "rx": "3.1.2"
+    "rx": "2.5.3"
   },
   "devDependencies": {
-    "babel-core": "5.8.3",
+    "babel-core": "5.8.25",
     "babel-loader": "5.3.2",
     "node-dev": "2.7.1",
-    "node-libs-browser": "0.5.2",
-    "parallelshell": "1.2.0",
-    "react-hot-loader": "1.2.8",
+    "parallelshell": "2.0.0",
+    "react-hot-loader": "1.3.0",
     "semistandard": "7.0.2",
     "snazzy": "2.0.1",
     "watch-run": "1.2.2",
-    "webpack": "1.10.1",
-    "webpack-dev-server": "1.10.1"
+    "webpack": "1.12.2",
+    "webpack-dev-server": "1.12.0"
   },
   "engines": {
     "node": ">=0.10.0"
