--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "url": "git@github.com:solenoid/pancake_project.git"
   },
   "scripts": {
-    "clean": "rm -rf node_modules dist",
+    "clean": "rm -rf node_modules dist data/user data/company",
     "lint": "semistandard --verbose | snazzy",
     "prepare": "npm install && mkdir -p dist/resources",
+    "populate-data": "node data/populate-db",
     "build:js": "webpack --optimize-minimize",
     "build:html": "cp src/index.html dist/index.html",
     "build:css": "cp src/main.css dist/resources/main.css",
     "build": "npm run prepare && npm run build:js && npm run build:html && npm run build:css",
-    "build-dev": "npm run prepare && npm run build:html && npm run build:css",
+    "build-dev": "npm run prepare && npm run build:html && npm run build:css && npm run populate-data",
     "watch:html": "watch-run -p 'src/**/*.html' 'npm run build:html'",
     "watch:css": "watch-run -p 'src/**/*.css' 'npm run build:css'",
     "start-dev": "node-dev lib/server --no-deps",
@@ -31,6 +32,7 @@
     "hapi": "9.3.1",
     "inert": "3.0.1",
     "lodash": "3.10.1",
+    "pouchdb": "4.0.3",
     "react": "0.13.3",
     "rest": "1.3.1",
     "rx": "2.5.3"
